[package]
name = "badges"
version = "0.1.0"
edition = "2024"

[dependencies]
firefly-rust = { version = "0.14.0", features = ["talc"] }
firefly-sudo = { version = "0.14.0", features = ["alloc"] }
firefly-types = "0.10.0"
firefly-ui = "0.3.1"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "s" # Optimize for speed.
lto = true      # Enable link-time optimization
